--- a/scheduler/scheduling.conf
+++ b/scheduler/scheduling.conf
@@ -1,16 +1,22 @@
 // # of Process	
 numprocess 3
 
-// mean deivation
-meandev 2000
+// average execution time
+run_time_average 1000
 
-// standard deviation
-standdev 0
+// standard deviation for execution time
+run_time_stddev 100
 
-// process    # I/O blocking
-process 500
-process 500
-process 500
+// average blocking time
+block_time_average 100
+
+// standard deviation for blocking time
+block_time_stddev 30
+
+// process (arrival time, process time)
+process 100 100
+process 1000 300
+process 1500 500
 
 // duration of the simulation in milliseconds
 runtime 10000
