Add quantum to config

--- a/scheduler/scheduling.conf
+++ b/scheduler/scheduling.conf
@@ -13,6 +13,9 @@ block_time_average 100
 // standard deviation for blocking time
 block_time_stddev 30
 
+// quantum for RR algorithm
+quantum 10
+
 // process (arrival time, process time)
 process 100 100
 process 1000 300
